sofa-platform/src/main/cpp/src/sofa.h

SOFAExport void iauP2s(double p[3], double *theta, double *phi, double *r);
SOFAExport void iauPv2s(double pv[2][3], double *theta, double *phi, double *r, double *td, double *pd, double *rd);
SOFAExport void iauS2c(double theta, double phi, double c[3]);
SOFAExport void iauS2p(double theta, double phi, double r, double p[3]);
SOFAExport void iauS2pv(double theta, double phi, double r, double td, double pd, double rd, double pv[2][3]);
/* VectorMatrix/VectorOps */
SOFAExport double iauPdp(double a[3], double b[3]);
SOFAExport double iauPm(double p[3]);
SOFAExport void iauPmp(double a[3], double b[3], double amb[3]);
SOFAExport void iauPn(double p[3], double *r, double u[3]);
SOFAExport void iauPpp(double a[3], double b[3], double apb[3]);
SOFAExport void iauPpsp(double a[3], double s, double b[3], double apsb[3]);
SOFAExport void iauPvdpv(double a[2][3], double b[2][3], double adb[2]);
SOFAExport void iauPvm(double pv[2][3], double *r, double *s);
SOFAExport void iauPvmpv(double a[2][3], double b[2][3], double amb[2][3]);
SOFAExport void iauPvppv(double a[2][3], double b[2][3], double apb[2][3]);
SOFAExport void iauPvu(double dt, double pv[2][3], double upv[2][3]);
SOFAExport void iauPvup(double dt, double pv[2][3], double p[3]);
SOFAExport void iauPvxpv(double a[2][3], double b[2][3], double axb[2][3]);
SOFAExport void iauPxp(double a[3], double b[3], double axb[3]);
SOFAExport void iauS2xpv(double s1, double s2, double pv[2][3], double spv[2][3]);
SOFAExport void iauSxp(double s, double p[3], double sp[3]);
SOFAExport void iauSxpv(double s, double pv[2][3], double spv[2][3]);