sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * Original signature : <code>void iauP2s(double[3], double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:383</i>
	 */
	public static void iauP2s(Pointer<Double > p, Pointer<Double > theta, Pointer<Double > phi, Pointer<Double > r) {
		iauP2s(Pointer.getPeer(p), Pointer.getPeer(theta), Pointer.getPeer(phi), Pointer.getPeer(r));
	}
	protected native static void iauP2s(@Ptr long p, @Ptr long theta, @Ptr long phi, @Ptr long r);
	/**
	 * Original signature : <code>void iauPv2s(double[2][3], double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:385</i>
	 */
	public static void iauPv2s(Pointer<Double > pv, Pointer<Double > theta, Pointer<Double > phi, Pointer<Double > r, Pointer<Double > td, Pointer<Double > pd, Pointer<Double > rd) {
		iauPv2s(Pointer.getPeer(pv), Pointer.getPeer(theta), Pointer.getPeer(phi), Pointer.getPeer(r), Pointer.getPeer(td), Pointer.getPeer(pd), Pointer.getPeer(rd));
	}
	protected native static void iauPv2s(@Ptr long pv, @Ptr long theta, @Ptr long phi, @Ptr long r, @Ptr long td, @Ptr long pd, @Ptr long rd);
	/**
	 * Original signature : <code>void iauS2c(double, double, double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:387</i>
	 */
	public static void iauS2c(double theta, double phi, Pointer<Double > c) {
		iauS2c(theta, phi, Pointer.getPeer(c));
	}
	protected native static void iauS2c(double theta, double phi, @Ptr long c);
	/**
	 * Original signature : <code>void iauS2p(double, double, double, double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:389</i>
	 */
	public static void iauS2p(double theta, double phi, double r, Pointer<Double > p) {
		iauS2p(theta, phi, r, Pointer.getPeer(p));
	}
	protected native static void iauS2p(double theta, double phi, double r, @Ptr long p);
	/**
	 * Original signature : <code>void iauS2pv(double, double, double, double, double, double, double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:391</i>
	 */
	public static void iauS2pv(double theta, double phi, double r, double td, double pd, double rd, Pointer<Double > pv) {
		iauS2pv(theta, phi, r, td, pd, rd, Pointer.getPeer(pv));
	}
	protected native static void iauS2pv(double theta, double phi, double r, double td, double pd, double rd, @Ptr long pv);
	/**
	 * VectorMatrix/VectorOps<br>
	 * Original signature : <code>double iauPdp(double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:396</i>
	 */
	public static double iauPdp(Pointer<Double > a, Pointer<Double > b) {
		return iauPdp(Pointer.getPeer(a), Pointer.getPeer(b));
	}
	protected native static double iauPdp(@Ptr long a, @Ptr long b);
	/**
	 * Original signature : <code>double iauPm(double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:398</i>
	 */
	public static double iauPm(Pointer<Double > p) {
		return iauPm(Pointer.getPeer(p));
	}
	protected native static double iauPm(@Ptr long p);
	/**
	 * Original signature : <code>void iauPmp(double[3], double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:400</i>
	 */
	public static void iauPmp(Pointer<Double > a, Pointer<Double > b, Pointer<Double > amb) {
		iauPmp(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(amb));
	}
	protected native static void iauPmp(@Ptr long a, @Ptr long b, @Ptr long amb);
	/**
	 * Original signature : <code>void iauPn(double[3], double*, double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:402</i>
	 */
	public static void iauPn(Pointer<Double > p, Pointer<Double > r, Pointer<Double > u) {
		iauPn(Pointer.getPeer(p), Pointer.getPeer(r), Pointer.getPeer(u));
	}
	protected native static void iauPn(@Ptr long p, @Ptr long r, @Ptr long u);
	/**
	 * Original signature : <code>void iauPpp(double[3], double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:404</i>
	 */
	public static void iauPpp(Pointer<Double > a, Pointer<Double > b, Pointer<Double > apb) {
		iauPpp(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(apb));
	}
	protected native static void iauPpp(@Ptr long a, @Ptr long b, @Ptr long apb);
	/**
	 * Original signature : <code>void iauPpsp(double[3], double, double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:406</i>
	 */
	public static void iauPpsp(Pointer<Double > a, double s, Pointer<Double > b, Pointer<Double > apsb) {
		iauPpsp(Pointer.getPeer(a), s, Pointer.getPeer(b), Pointer.getPeer(apsb));
	}
	protected native static void iauPpsp(@Ptr long a, double s, @Ptr long b, @Ptr long apsb);
	/**
	 * Original signature : <code>void iauPvdpv(double[2][3], double[2][3], double[2])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:408</i>
	 */
	public static void iauPvdpv(Pointer<Double > a, Pointer<Double > b, Pointer<Double > adb) {
		iauPvdpv(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(adb));
	}
	protected native static void iauPvdpv(@Ptr long a, @Ptr long b, @Ptr long adb);
	/**
	 * Original signature : <code>void iauPvm(double[2][3], double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:410</i>
	 */
	public static void iauPvm(Pointer<Double > pv, Pointer<Double > r, Pointer<Double > s) {
		iauPvm(Pointer.getPeer(pv), Pointer.getPeer(r), Pointer.getPeer(s));
	}
	protected native static void iauPvm(@Ptr long pv, @Ptr long r, @Ptr long s);
	/**
	 * Original signature : <code>void iauPvmpv(double[2][3], double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:412</i>
	 */
	public static void iauPvmpv(Pointer<Double > a, Pointer<Double > b, Pointer<Double > amb) {
		iauPvmpv(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(amb));
	}
	protected native static void iauPvmpv(@Ptr long a, @Ptr long b, @Ptr long amb);
	/**
	 * Original signature : <code>void iauPvppv(double[2][3], double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:414</i>
	 */
	public static void iauPvppv(Pointer<Double > a, Pointer<Double > b, Pointer<Double > apb) {
		iauPvppv(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(apb));
	}
	protected native static void iauPvppv(@Ptr long a, @Ptr long b, @Ptr long apb);
	/**
	 * Original signature : <code>void iauPvu(double, double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:416</i>
	 */
	public static void iauPvu(double dt, Pointer<Double > pv, Pointer<Double > upv) {
		iauPvu(dt, Pointer.getPeer(pv), Pointer.getPeer(upv));
	}
	protected native static void iauPvu(double dt, @Ptr long pv, @Ptr long upv);
	/**
	 * Original signature : <code>void iauPvup(double, double[2][3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:418</i>
	 */
	public static void iauPvup(double dt, Pointer<Double > pv, Pointer<Double > p) {
		iauPvup(dt, Pointer.getPeer(pv), Pointer.getPeer(p));
	}
	protected native static void iauPvup(double dt, @Ptr long pv, @Ptr long p);
	/**
	 * Original signature : <code>void iauPvxpv(double[2][3], double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:420</i>
	 */
	public static void iauPvxpv(Pointer<Double > a, Pointer<Double > b, Pointer<Double > axb) {
		iauPvxpv(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(axb));
	}
	protected native static void iauPvxpv(@Ptr long a, @Ptr long b, @Ptr long axb);
	/**
	 * Original signature : <code>void iauPxp(double[3], double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:422</i>
	 */
	public static void iauPxp(Pointer<Double > a, Pointer<Double > b, Pointer<Double > axb) {
		iauPxp(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(axb));
	}
	protected native static void iauPxp(@Ptr long a, @Ptr long b, @Ptr long axb);
	/**
	 * Original signature : <code>void iauS2xpv(double, double, double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:424</i>
	 */
	public static void iauS2xpv(double s1, double s2, Pointer<Double > pv, Pointer<Double > spv) {
		iauS2xpv(s1, s2, Pointer.getPeer(pv), Pointer.getPeer(spv));
	}
	protected native static void iauS2xpv(double s1, double s2, @Ptr long pv, @Ptr long spv);
	/**
	 * Original signature : <code>void iauSxp(double, double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:426</i>
	 */
	public static void iauSxp(double s, Pointer<Double > p, Pointer<Double > sp) {
		iauSxp(s, Pointer.getPeer(p), Pointer.getPeer(sp));
	}
	protected native static void iauSxp(double s, @Ptr long p, @Ptr long sp);
	/**
	 * Original signature : <code>void iauSxpv(double, double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:428</i>
	 */
	public static void iauSxpv(double s, Pointer<Double > pv, Pointer<Double > spv) {
		iauSxpv(s, Pointer.getPeer(pv), Pointer.getPeer(spv));
	}
	protected native static void iauSxpv(double s, @Ptr long pv, @Ptr long spv);
}
